<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/difficulty"
        android:title="Difficulty">
        <menu>
            <group android:checkableBehavior="all">
                <item android:id="@+id/easy"
                    android:title="@string/easy"
                    >
                </item>
                <item android:id="@+id/medium"
                    android:title="@string/medium"
                    android:checkable="true">
                </item>
                <item android:id="@+id/hard"
                    android:title="@string/hard"
                    android:checkable="true">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/light"
        android:title="Light">
        <menu>
            <group android:checkableBehavior="all">
                <item android:id="@+id/low"
                    android:title="@string/low"
                    >
                </item>
                <item android:id="@+id/indirect"
                    android:title="@string/indirect"
                    android:checkable="true">
                </item>
                <item android:id="@+id/bright"
                    android:title="@string/bright"
                    android:checkable="true">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/temp"
        android:title="Temperature">
        <menu>
            <group android:checkableBehavior="all">
                <item android:id="@+id/cold"
                    android:title="@string/cold"
                    >
                </item>
                <item android:id="@+id/warm"
                    android:title="@string/warm"
                    android:checkable="true">
                </item>
                <item android:id="@+id/hot"
                    android:title="@string/hot"
                    android:checkable="true">
                </item>
            </group>
        </menu>
    </item>


</menu>