<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receives"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_wrongLightCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_wrongLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/perfect"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_addPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/add_plant" />

        <Button
            android:id="@+id/button_buyPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/medium_green"
            android:text="@string/buy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>